--- a/templates/accounts/dashboard_admin.html
+++ b/templates/accounts/dashboard_admin.html
@@ -166,13 +166,13 @@
                 </div>
                 <div class="card-body">
                     <div class="list-group list-group-flush">
-                        <a href="{% url 'funcionario:funcionario_list' %}" class="list-group-item list-group-item-action">
+                        <a href="{% url 'funcionario:list' %}" class="list-group-item list-group-item-action">
                             <i class="bi bi-person-badge"></i> Funcionários
                         </a>
-                        <a href="{% url 'familia:familia_list' %}" class="list-group-item list-group-item-action">
+                        <a href="{% url 'familia:list' %}" class="list-group-item list-group-item-action">
                             <i class="bi bi-house-heart"></i> Famílias
                         </a>
-                        <a href="{% url 'pessoa_falecida:pessoa_falecida_list' %}" class="list-group-item list-group-item-action">
+                        <a href="{% url 'pessoa_falecida:list' %}" class="list-group-item list-group-item-action">
                             <i class="bi bi-person-x"></i> Pessoas Falecidas
                         </a>
                     </div>
@@ -188,10 +188,10 @@
                 </div>
                 <div class="card-body">
                     <div class="list-group list-group-flush">
-                        <a href="{% url 'item_servico:item_servico_list' %}" class="list-group-item list-group-item-action">
+                        <a href="{% url 'item_servico:list' %}" class="list-group-item list-group-item-action">
                             <i class="bi bi-box"></i> Itens de Serviço
                         </a>
-                        <a href="{% url 'servico_contratado:servico_contratado_list' %}" class="list-group-item list-group-item-action">
+                        <a href="{% url 'servico_contratado:list' %}" class="list-group-item list-group-item-action">
                             <i class="bi bi-clipboard-check"></i> Serviços Contratados
                         </a>
                         <a href="#" class="list-group-item list-group-item-action">
@@ -211,13 +211,13 @@
                 </div>
                 <div class="card-body">
                     <div class="list-group list-group-flush">
-                        <a href="{% url 'agendamento:agendamento_list' %}" class="list-group-item list-group-item-action">
+                        <a href="{% url 'agendamento:list' %}" class="list-group-item list-group-item-action">
                             <i class="bi bi-calendar-check"></i> Agendamentos
                         </a>
-                        <a href="{% url 'planejamento:planejamento_list' %}" class="list-group-item list-group-item-action">
+                        <a href="{% url 'planejamento:list' %}" class="list-group-item list-group-item-action">
                             <i class="bi bi-diagram-3"></i> Planejamentos
                         </a>
-                        <a href="{% url 'financeiro:financeiro_list' %}" class="list-group-item list-group-item-action">
+                        <a href="{% url 'financeiro:list' %}" class="list-group-item list-group-item-action">
                             <i class="bi bi-cash-stack"></i> Financeiro
                         </a>
                     </div>
