--- a/templates/accounts/dashboard_funcionario.html
+++ b/templates/accounts/dashboard_funcionario.html
@@ -166,7 +166,7 @@
                                 </div>
                                 <div class="col-md-2">
                                     <div class="btn-group btn-group-sm">
-                                        <a href="{% url 'agendamento:agendamento_detail' agendamento.pk %}" 
+                                        <a href="{% url 'agendamento:detail' agendamento.pk %}" 
                                            class="btn btn-outline-primary" title="Ver Detalhes">
                                             <i class="bi bi-eye"></i>
                                         </a>
