--- a/templates/agendamento/agendamento_form.html
+++ b/templates/agendamento/agendamento_form.html
@@ -47,10 +47,16 @@
                         <a href="{% url 'agendamento:list' %}" class="btn btn-secondary btn-custom me-md-2">
                             <i class="bi bi-x-circle me-1"></i>Cancelar
                         </a>
-                        <button type="submit" class="btn btn-primary btn-custom">
-                            <i class="bi bi-check-circle me-1"></i>
-                            {% if object %}Atualizar{% else %}Salvar{% endif %}
-                        </button>
+                        {% if user.cargo == 'adm' or user.cargo == 'vendedor' or user.is_funcionario_operacional %}
+                            <button type="submit" class="btn btn-primary btn-custom">
+                                <i class="bi bi-check-circle me-1"></i>
+                                {% if object %}Atualizar{% else %}Salvar{% endif %}
+                            </button>
+                        {% else %}
+                            <button type="button" class="btn btn-secondary btn-custom" disabled title="Apenas administradores, vendedores e funcionários operacionais podem salvar agendamentos">
+                                <i class="bi bi-lock me-1"></i>Acesso Restrito
+                            </button>
+                        {% endif %}
                     </div>
                 </form>
             </div>
