--- a/templates/funcionario/funcionario_form.html
+++ b/templates/funcionario/funcionario_form.html
@@ -84,10 +84,16 @@
                         <a href="{% url 'funcionario:list' %}" class="btn btn-secondary btn-custom me-md-2">
                             <i class="bi bi-x-circle me-1"></i>Cancelar
                         </a>
-                        <button type="submit" class="btn btn-primary btn-custom">
-                            <i class="bi bi-check-circle me-1"></i>
-                            {% if object %}Atualizar{% else %}Salvar{% endif %}
-                        </button>
+                        {% if user.cargo == 'adm' %}
+                            <button type="submit" class="btn btn-primary btn-custom">
+                                <i class="bi bi-check-circle me-1"></i>
+                                {% if object %}Atualizar{% else %}Salvar{% endif %}
+                            </button>
+                        {% else %}
+                            <button type="button" class="btn btn-secondary btn-custom" disabled title="Apenas administradores podem salvar funcionários">
+                                <i class="bi bi-lock me-1"></i>Acesso Restrito
+                            </button>
+                        {% endif %}
                     </div>
                 </form>
             </div>
