--- a/templates/item_servico/item_servico_form.html
+++ b/templates/item_servico/item_servico_form.html
@@ -9,7 +9,7 @@
                     <h4 class="mb-0">{{ title|default:"Item/Serviço" }}</h4>
                 </div>
                 <div class="card-body">
-                    <form method="post">
+                    <form method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         
                         <div class="mb-3">
@@ -65,13 +65,40 @@
                             </div>
                         </div>
 
+                        <div class="mb-3">
+                            <label for="{{ form.imagem.id_for_label }}" class="form-label">{{ form.imagem.label }}</label>
+                            {{ form.imagem }}
+                            {% if form.imagem.help_text %}
+                                <div class="form-text">{{ form.imagem.help_text }}</div>
+                            {% endif %}
+                            {% if form.imagem.errors %}
+                                <div class="text-danger">
+                                    {% for error in form.imagem.errors %}
+                                        <small>{{ error }}</small>
+                                    {% endfor %}
+                                </div>
+                            {% endif %}
+                            {% if object and object.imagem %}
+                                <div class="mt-2">
+                                    <small class="text-muted">Imagem atual:</small><br>
+                                    <img src="{{ object.imagem.url }}" alt="{{ object.nome }}" class="img-thumbnail" style="max-width: 200px; max-height: 200px;">
+                                </div>
+                            {% endif %}
+                        </div>
+
                         <div class="d-flex justify-content-between">
                             <a href="{% url 'item_servico:list' %}" class="btn btn-secondary">
                                 <i class="fas fa-arrow-left"></i> Voltar
                             </a>
-                            <button type="submit" class="btn btn-primary">
-                                <i class="fas fa-save"></i> Salvar
-                            </button>
+                            {% if user.cargo == 'adm' or user.cargo == 'vendedor' %}
+                                <button type="submit" class="btn btn-primary">
+                                    <i class="fas fa-save"></i> Salvar
+                                </button>
+                            {% else %}
+                                <button type="button" class="btn btn-secondary" disabled title="Apenas administradores e vendedores podem salvar itens de serviço">
+                                    <i class="fas fa-lock"></i> Acesso Restrito
+                                </button>
+                            {% endif %}
                         </div>
                     </form>
                 </div>
