--- a/templates/pessoa_falecida/pessoa_falecida_form.html
+++ b/templates/pessoa_falecida/pessoa_falecida_form.html
@@ -103,9 +103,15 @@
                             <a href="{% url 'pessoa_falecida:list' %}" class="btn btn-secondary">
                                 <i class="bi bi-x-circle"></i> Cancelar
                             </a>
-                            <button type="submit" class="btn btn-primary">
-                                <i class="bi bi-check-circle"></i> Salvar
-                            </button>
+                            {% if user.cargo == 'adm' or user.cargo == 'vendedor' %}
+                                <button type="submit" class="btn btn-primary">
+                                    <i class="bi bi-check-circle"></i> Salvar
+                                </button>
+                            {% else %}
+                                <button type="button" class="btn btn-secondary" disabled title="Apenas administradores e vendedores podem salvar pessoas falecidas">
+                                    <i class="bi bi-lock"></i> Acesso Restrito
+                                </button>
+                            {% endif %}
                         </div>
                     </form>
                 </div>
