Melhorias nos dashboards, vendedor, funcionarios, administracao

--- a/templates/funcionario/funcionario_list.html
+++ b/templates/funcionario/funcionario_list.html
@@ -30,7 +30,7 @@
                 {% for funcionario in funcionarios %}
                 <tr>
                     <td>{{ funcionario.nome }}</td>
-                    <td>{{ funcionario.cargo }}</td>
+                    <td>{{ funcionario.get_cargo_display }}</td>
                     <td>{{ funcionario.telefone }}</td>
                     <td>{{ funcionario.email }}</td>
                     <td>
