--- a/templates/funcionario/funcionario_detail.html
+++ b/templates/funcionario/funcionario_detail.html
@@ -40,7 +40,7 @@
                     <dt class="col-sm-3">
                         <i class="bi bi-briefcase me-1"></i>Cargo:
                     </dt>
-                    <dd class="col-sm-9">{{ funcionario.cargo }}</dd>
+                    <dd class="col-sm-9">{{ funcionario.get_cargo_display }}</dd>
 
                     <dt class="col-sm-3">
                         <i class="bi bi-telephone me-1"></i>Telefone:
